<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen1">

        <ImageView
            android:id="@+id/img_ciudad"
            android:layout_width="@dimen/ancho1_item_reciclerview"
            android:layout_height="@dimen/alto1_reciclerview"
            android:layout_weight="1"
            android:contentDescription="@string/img_ciudad"
            app:srcCompat="@drawable/ciudad1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding1">

            <TextView
                android:id="@+id/txt_rv_nombrec"
                android:layout_width="@dimen/ancho1_item_reciclerview"
                android:layout_height="wrap_content"
                android:text="@string/nombre_ciudad"
                android:textSize="@dimen/tam_letra1" />

            <TextView
                android:id="@+id/txt_rv_habitantesc"
                android:layout_width="@dimen/ancho1_item_reciclerview"
                android:layout_height="wrap_content"
                android:text="@string/habitantes" />

            <TextView
                android:id="@+id/txt_rv_provinciac"
                android:layout_width="@dimen/ancho1_item_reciclerview"
                android:layout_height="wrap_content"
                android:text="@string/provincia" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>