<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarDetalleCiudadActivity">

    <ImageView
        android:id="@+id/img_detalle_ciudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen2"
        android:contentDescription="@string/imagen_dealle_ciudad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ciudad1" />

    <TextView
        android:id="@+id/txt_detalle_nombrec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen1"
        android:layout_marginTop="@dimen/margen2"
        android:text="@string/nombre_ciudad"
        android:textSize="@dimen/tam_titulo"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detalle_ciudad" />

    <TextView
        android:id="@+id/txt_detalle_habitantes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen1"
        android:layout_marginLeft="@dimen/margen1"
        android:layout_marginTop="@dimen/margen2"
        android:layout_marginEnd="@dimen/margen1"
        android:layout_marginRight="@dimen/margen1"
        android:text="@string/habitantes_ciudad"
        android:textSize="@dimen/tam_letra2"
        app:layout_constraintEnd_toEndOf="@+id/txt_detalle_nombrec"
        app:layout_constraintStart_toStartOf="@+id/txt_detalle_nombrec"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalle_nombrec" />

    <TextView
        android:id="@+id/txt_detalle_idprovincia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen2"
        android:text="@string/id_provincia_ciudad"
        android:textSize="@dimen/tam_letra2"
        app:layout_constraintEnd_toEndOf="@+id/txt_detalle_habitantes"
        app:layout_constraintStart_toStartOf="@+id/txt_detalle_habitantes"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalle_habitantes" />

    <ImageView
        android:id="@+id/img_atras_detalle_ciudad"
        android:layout_width="@dimen/ancho1_boton"
        android:layout_height="@dimen/alto1_boton"
        android:layout_marginTop="@dimen/margen2"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="atras_detalle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalle_idprovincia"
        app:srcCompat="@drawable/atras1" />

</androidx.constraintlayout.widget.ConstraintLayout>